--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/stream-wrapper",
+    "name": "egroupware/stream-wrapper",
     "description": "PHP stream wrappers library",
     "type": "library",
     "homepage": "https://www.horde.org/libraries/Horde_Stream_Wrapper",
@@ -16,7 +16,7 @@
             "role": "lead"
         }
     ],
-    "version": "2.1.4",
+    "version": "2.1.5",
     "time": "2018-01-25",
     "repositories": [
         {
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^5.3 || ^7"
+        "php": "^5.3 || ^7 || ^8"
     },
     "replace": {
         "pear-pear.horde.org/Horde_Stream_Wrapper": "2.*",
